--- a/src/view/Start.fxml
+++ b/src/view/Start.fxml
@@ -3,17 +3,45 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="280.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windowCtrl.StartWindowCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windowCtrl.StartWindowCtrl">
    <children>
-      <ListView fx:id="lv_accounts" layoutY="33.0" prefHeight="200.0" prefWidth="579.0" visible="false" />
-      <Label layoutX="12.0" text="Konten">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="btn_newAcc" layoutX="15.0" layoutY="47.0" mnemonicParsing="false" onAction="#onNewAcc" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" />
+      <MenuBar prefHeight="25.0" prefWidth="600.0">
+         <menus>
+            <Menu fx:id="m_file" mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem fx:id="mi_newAcc" mnemonicParsing="false" onAction="#openNewAccount" text="Neues Konto" />
+                  <MenuItem fx:id="mi_save" mnemonicParsing="false" onAction="#save" text="Speichern" />
+                  <MenuItem fx:id="mi_load" mnemonicParsing="false" onAction="#load" text="Laden" />
+                  <MenuItem fx:id="mi_close" mnemonicParsing="false" onAction="#close" text="Close" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Delete" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+      <AnchorPane fx:id="contentPane" layoutX="25.0" layoutY="50.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.topAnchor="40.0">
+         <children>
+            <Label text="Konten">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ListView fx:id="lv_accounts" prefHeight="200.0" prefWidth="558.0" visible="false" AnchorPane.topAnchor="30.0" />
+            <Button fx:id="btn_newAcc" mnemonicParsing="false" onAction="#onNewAcc" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.topAnchor="30.0" />
+         </children></AnchorPane>
    </children>
-</Pane>
+</AnchorPane>
