--- a/src/view/Account.fxml
+++ b/src/view/Account.fxml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windowCtrl.AccountWindowCtrl">
+<?import javafx.scene.chart.Axis?>
+<?import javafx.scene.chart.ValueAxis?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windowCtrl.AccountWindowCtrl">
    <children>
       <MenuBar prefHeight="25.0" prefWidth="600.0">
          <menus>
@@ -30,19 +41,20 @@
       </MenuBar>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="280.0" prefWidth="580.0" AnchorPane.topAnchor="30.0">
          <children>
-            <Label fx:id="lbl_account" prefHeight="41.0" prefWidth="134.0" text="lbl_account">
+            <Label fx:id="lbl_account" prefHeight="41.0" prefWidth="139.0" text="lbl_account">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Pane fx:id="pane_table" layoutX="27.0" layoutY="40.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="40.0">
-               <children>
-                  <Label layoutX="257.0" layoutY="92.0" text="Transactiontable" />
-               </children>
-            </Pane>
+            <TabPane fx:id="tabPane" layoutY="40.0" prefHeight="240.0" prefWidth="580.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <tabs>
+                  <Tab fx:id="diagramm_tab" text="Allgemein"/>
+                   <Tab fx:id="template_tab" text="Vorlagen"/>
+               </tabs>
+            </TabPane>
+            <Button fx:id="btn_back" layoutX="523.0" layoutY="7.0" mnemonicParsing="false" onAction="#back" text="Back" />
          </children>
       </AnchorPane>
-      <Button fx:id="btn_back" layoutX="358.0" layoutY="350.0" mnemonicParsing="false" onAction="#back" text="Back" />
       <Button fx:id="btn_newTr" layoutX="51.0" layoutY="325.0" mnemonicParsing="false" onAction="#newTransaction" text="New Transaction" />
    </children>
 </AnchorPane>
