--- a/src/view/Start.fxml
+++ b/src/view/Start.fxml
@@ -7,11 +7,14 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windowCtrl.StartWindowCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windowCtrl.StartWindowCtrl">
    <children>
-      <MenuBar prefHeight="25.0" prefWidth="600.0">
+      <MenuBar prefHeight="25.0" prefWidth="1259.0">
          <menus>
             <Menu fx:id="m_file" mnemonicParsing="false" text="File">
                <items>
@@ -32,7 +35,7 @@
             </Menu>
          </menus>
       </MenuBar>
-      <AnchorPane fx:id="contentPane" layoutX="25.0" layoutY="50.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.topAnchor="40.0">
+      <AnchorPane fx:id="contentPane" layoutX="25.0" layoutY="50.0" prefHeight="345.0" prefWidth="558.0" AnchorPane.topAnchor="40.0">
          <children>
             <Label text="Konten">
                <font>
@@ -41,6 +44,25 @@
             </Label>
             <ListView fx:id="lv_accounts" prefHeight="200.0" prefWidth="558.0" visible="false" AnchorPane.topAnchor="30.0" />
             <Button fx:id="btn_newAcc" mnemonicParsing="false" onAction="#onNewAcc" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.topAnchor="30.0" />
+            <GridPane fx:id="gp_load" layoutY="40.0" prefHeight="90.0" prefWidth="322.0" visible="false">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="65.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="257.0" minWidth="10.0" prefWidth="257.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="lbl_element" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="lbl_load" text="Label" GridPane.columnIndex="1" />
+                  <Label layoutX="10.0" layoutY="17.0" text="Geladen:" />
+                  <Label layoutX="110.0" layoutY="47.0" text="Element:" GridPane.rowIndex="1" />
+                  <Label fx:id="lbl_count" layoutX="10.0" layoutY="47.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label layoutX="10.0" layoutY="17.0" text="Anzahl" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
          </children></AnchorPane>
    </children>
 </AnchorPane>
