--- a/src/view/Account.fxml
+++ b/src/view/Account.fxml
@@ -19,8 +19,12 @@
          <menus>
             <Menu fx:id="m_file" mnemonicParsing="false" text="File">
                <items>
-                  <MenuItem fx:id="mi_close" mnemonicParsing="false" onAction="#close" text="Schließen" />
+                  <MenuItem mnemonicParsing="false" onAction="#newTransaction" text="Neu" />
+                  <MenuItem mnemonicParsing="false" onAction="#renameReason" text="Änderung" />
+                  <MenuItem mnemonicParsing="false" onAction="#readPDF" text="Importieren..." />
+                  <MenuItem fx:id="mi_save" mnemonicParsing="false" onAction="#save" text="Speichern" />
                   <MenuItem mnemonicParsing="false" onAction="#saveUnder" text="Speichern unter..." />
+                  <MenuItem fx:id="mi_close" mnemonicParsing="false" onAction="#close" text="Schließen" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
@@ -39,27 +43,12 @@
          <children>
             <FlowPane layoutX="26.0" layoutY="20.0" prefHeight="580.0" prefWidth="762.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                <children>
-                  <Label fx:id="lbl_account" prefHeight="41.0" prefWidth="356.0" text="lbl_account">
+                  <Label fx:id="lbl_account" prefHeight="41.0" prefWidth="659.0" text="lbl_account">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Button fx:id="btn_newTr" mnemonicParsing="false" onAction="#newTransaction" text="Neue Transaction">
-                     <FlowPane.margin>
-                        <Insets />
-                     </FlowPane.margin>
-                  </Button>
-                  <Pane prefHeight="41.0" prefWidth="613.0">
-                     <children>
-                        <Button layoutX="56.0" layoutY="2.0" mnemonicParsing="false" onAction="#readPDF" text="PDF" />
-                        <Button layoutX="104.0" layoutY="3.0" mnemonicParsing="false" onAction="#renameReason" text="Zweck umbenennen" />
-                        <ProgressBar fx:id="pb_pdf" layoutX="265.0" layoutY="12.0" prefWidth="200.0" progress="0.0" />
-                     </children></Pane>
-                  <Button fx:id="btn_save" mnemonicParsing="false" onAction="#save" text="Speichern">
-                     <FlowPane.margin>
-                        <Insets right="5.0" />
-                     </FlowPane.margin>
-                  </Button>
+                  <Pane prefHeight="41.0" prefWidth="495.0" />
                   <Button fx:id="btn_back" mnemonicParsing="false" onAction="#back" text="Zurück" />
                   <Pane fx:id="diagrammContainer" prefHeight="357.0" prefWidth="1216.0">
                      <FlowPane.margin>
@@ -74,11 +63,25 @@
                   </Pane>
                </children>
             </FlowPane>
-            <Pane fx:id="savePane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="428.0" visible="false">
+            <Pane fx:id="savePane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0" visible="false">
                <children>
+                  <Label layoutX="169.0" layoutY="29.0" text="Wird gespeichert">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Label>
                   <ProgressBar fx:id="pb_year" layoutX="114.0" layoutY="60.0" prefWidth="200.0" progress="0.0" />
                   <ProgressBar fx:id="pb_transa" layoutX="114.0" layoutY="118.0" prefWidth="200.0" progress="0.0" />
-                  <Label layoutX="169.0" layoutY="29.0" text="Wird gespeichert" />
+               </children>
+            </Pane>
+
+            <Pane fx:id="pdfPane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0" visible="false">
+               <children>
+                  <Label layoutX="145.0" layoutY="43.0" text="PDF wird geladen">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <ProgressBar fx:id="pb_pdf" layoutX="115.0" layoutY="151.0" prefWidth="200.0" progress="0.0" />
                </children>
             </Pane>
          </children>
