--- a/src/view/Start.fxml
+++ b/src/view/Start.fxml
@@ -7,9 +7,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windowCtrl.StartWindowCtrl">
@@ -35,34 +33,24 @@
             </Menu>
          </menus>
       </MenuBar>
-      <AnchorPane fx:id="contentPane" layoutX="25.0" layoutY="50.0" prefHeight="345.0" prefWidth="558.0" AnchorPane.topAnchor="40.0">
+      <AnchorPane fx:id="contentPane" layoutX="25.0" layoutY="50.0" prefHeight="720.0" prefWidth="1232.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="40.0">
          <children>
             <Label text="Konten">
                <font>
-                  <Font size="18.0" />
+                  <Font size="24.0" />
                </font>
             </Label>
-            <ListView fx:id="lv_accounts" prefHeight="200.0" prefWidth="558.0" visible="false" AnchorPane.topAnchor="30.0" />
-            <Button fx:id="btn_newAcc" mnemonicParsing="false" onAction="#onNewAcc" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.topAnchor="30.0" />
-            <GridPane fx:id="gp_load" layoutY="40.0" prefHeight="90.0" prefWidth="322.0" visible="false">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="65.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="257.0" minWidth="10.0" prefWidth="257.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label fx:id="lbl_element" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label fx:id="lbl_load" text="Label" GridPane.columnIndex="1" />
-                  <Label layoutX="10.0" layoutY="17.0" text="Geladen:" />
-                  <Label layoutX="110.0" layoutY="47.0" text="Element:" GridPane.rowIndex="1" />
-                  <Label fx:id="lbl_count" layoutX="10.0" layoutY="47.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label layoutX="10.0" layoutY="17.0" text="Anzahl" GridPane.rowIndex="2" />
-               </children>
-            </GridPane>
+            <ListView fx:id="lv_accounts" prefHeight="200.0" prefWidth="558.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+            <Button fx:id="btn_newAcc" mnemonicParsing="false" onAction="#onNewAcc" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="50.0" />
+             <Pane fx:id="loadPane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0">
+                 <children>
+                     <Label layoutX="192.0" layoutY="23.0" text="Lädt...">
+                         <font>
+                             <Font size="18.0" />
+                         </font>
+                     </Label>
+                 </children>
+             </Pane>
          </children></AnchorPane>
    </children>
 </AnchorPane>
