--- a/src/view/windows/Start.fxml
+++ b/src/view/windows/Start.fxml
@@ -41,7 +41,7 @@
                </font>
             </Label>
             <ListView fx:id="lv_accounts" prefHeight="200.0" prefWidth="558.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
-            <Button fx:id="btn_newAcc" mnemonicParsing="false" onAction="#onNewAcc" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="50.0" />
+            <Button fx:id="btn_createProfile" mnemonicParsing="false" onAction="#createProfile" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="50.0" />
              <Pane fx:id="loadPane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0">
                  <children>
                      <Label layoutX="192.0" layoutY="23.0" text="Lädt...">
@@ -51,6 +51,12 @@
                      </Label>
                  </children>
              </Pane>
-         </children></AnchorPane>
+             <Label fx:id="lbl_error" layoutX="192.0" layoutY="23.0" text="Lädt...">
+                 <font>
+                     <Font size="18.0" />
+                 </font>
+             </Label>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
