--- a/src/view/windows/Start.fxml
+++ b/src/view/windows/Start.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<?import view.panes.MyClassNode?>
+<?import view.simple_panes.CreateNew?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.StartWindowCtrl">
    <children>
       <MenuBar prefHeight="25.0" prefWidth="1259.0">
@@ -40,7 +42,8 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <ListView fx:id="lv_accounts" prefHeight="200.0" prefWidth="558.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+            <ListView fx:id="lv_accounts" prefHeight="20.0" prefWidth="558.0" visible="false"  AnchorPane.leftAnchor="0.0"  AnchorPane.topAnchor="50.0" />
+             <CreateNew AnchorPane.topAnchor="120.0"/>
             <Button fx:id="btn_createProfile" mnemonicParsing="false" onAction="#createProfile" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="50.0" />
              <Pane fx:id="loadPane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0">
                  <children>
