--- a/src/view/windows/Start.fxml
+++ b/src/view/windows/Start.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<?import view.panes.MyClassNode?>
+<?import view.simple_panes.MyClassNode?>
 <?import view.simple_panes.CreateNew?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.StartWindowCtrl">
    <children>
