neuer loogin screen

--- a/src/view/panes/entry_panes/AmountEntry.fxml
+++ b/src/view/panes/entry_panes/AmountEntry.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="271.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.panes.AmountEntryWindowCtrl">
+<HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="271.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.panes.entry_panes.AmountEntryWindowCtrl">
    <children>
       <TextField fx:id="tf_money" prefHeight="25.0" prefWidth="74.0" />
       <Label text=",">
