--- a/src/view/windows/Start.fxml
+++ b/src/view/windows/Start.fxml
@@ -1,65 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import view.simple_panes.MyClassNode?>
-<?import view.simple_panes.CreateNew?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.StartWindowCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="231.0" prefWidth="470.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.StartWindowCtrl">
    <children>
-      <MenuBar prefHeight="25.0" prefWidth="1259.0">
-         <menus>
-            <Menu fx:id="m_file" mnemonicParsing="false" text="File">
-               <items>
-                  <MenuItem fx:id="mi_newAcc" mnemonicParsing="false" onAction="#openNewAccount" text="Neues Konto" />
-                  <MenuItem fx:id="mi_load" mnemonicParsing="false" onAction="#load" text="Laden" />
-                  <MenuItem fx:id="mi_close" mnemonicParsing="false" onAction="#close" text="Close" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Edit">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Delete" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="About" />
-               </items>
-            </Menu>
-         </menus>
-      </MenuBar>
-      <AnchorPane fx:id="contentPane" layoutX="25.0" layoutY="50.0" prefHeight="720.0" prefWidth="1232.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="40.0">
+      <Label alignment="CENTER" layoutX="10.0" layoutY="25.0" prefHeight="34.0" prefWidth="259.0" text="LOGIN" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <VBox alignment="TOP_CENTER" layoutX="185.0" layoutY="76.0" prefHeight="68.0" prefWidth="470.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Label text="Konten">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <ListView fx:id="lv_accounts" prefHeight="20.0" prefWidth="558.0" visible="false"  AnchorPane.leftAnchor="0.0"  AnchorPane.topAnchor="50.0" />
-             <CreateNew AnchorPane.topAnchor="120.0"/>
-            <Button fx:id="btn_createProfile" mnemonicParsing="false" onAction="#createProfile" prefHeight="69.0" prefWidth="151.0" text="Neues Konto" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="50.0" />
-             <Pane fx:id="loadPane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0">
-                 <children>
-                     <Label layoutX="192.0" layoutY="23.0" text="Lädt...">
-                         <font>
-                             <Font size="18.0" />
-                         </font>
-                     </Label>
-                 </children>
-             </Pane>
-             <Label fx:id="lbl_error" layoutX="192.0" layoutY="23.0" text="Lädt...">
-                 <font>
-                     <Font size="18.0" />
-                 </font>
-             </Label>
+            <ChoiceBox fx:id="chb_profiles" prefWidth="150.0" />
          </children>
-      </AnchorPane>
+      </VBox>
+      <Button layoutX="209.0" layoutY="168.0" mnemonicParsing="false" text="OK" onAction="#ok" />
    </children>
 </AnchorPane>
