--- a/src/view/windows/Overview.fxml
+++ b/src/view/windows/Overview.fxml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.AccountWindowCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1259.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.OverviewWindowCtrl">
    <children>
       <MenuBar prefHeight="25.0" prefWidth="1182.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <menus>
             <Menu fx:id="m_file" mnemonicParsing="false" text="File">
                <items>
-                  <MenuItem mnemonicParsing="false" onAction="#newTransaction" text="Neu" />
-                  <MenuItem mnemonicParsing="false" onAction="#renameReason" text="Änderung" />
-                  <MenuItem mnemonicParsing="false" onAction="#readPDF" text="Importieren..." />
-                  <MenuItem fx:id="mi_save" mnemonicParsing="false" onAction="#save" text="Speichern" />
-                  <MenuItem mnemonicParsing="false" onAction="#saveUnder" text="Speichern unter..." />
+                  <MenuItem mnemonicParsing="false"  text="Neu" />
+                  <MenuItem mnemonicParsing="false"  text="Änderung" />
+                  <MenuItem mnemonicParsing="false"  text="Importieren..." />
+                  <MenuItem fx:id="mi_save" mnemonicParsing="false"  text="Speichern" />
+                  <MenuItem mnemonicParsing="false" text="Speichern unter..." />
                   <MenuItem fx:id="mi_close" mnemonicParsing="false" onAction="#close" text="Schließen" />
                </items>
             </Menu>
@@ -41,40 +41,19 @@
       </MenuBar>
       <AnchorPane layoutX="14.0" layoutY="25.0" prefHeight="580.0" prefWidth="983.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
          <children>
-            <FlowPane layoutX="26.0" layoutY="20.0" prefHeight="580.0" prefWidth="762.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
-               <children>
-                  <Label fx:id="lbl_account" prefHeight="41.0" prefWidth="659.0" text="lbl_account">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Pane prefHeight="41.0" prefWidth="495.0" />
-                  <Button fx:id="btn_back" mnemonicParsing="false" onAction="#back" text="Zurück" />
-                  <Pane fx:id="diagrammContainer" prefHeight="357.0" prefWidth="1216.0">
-                     <FlowPane.margin>
-                        <Insets bottom="10.0" />
-                     </FlowPane.margin>
-                  </Pane>
-                  <TabPane fx:id="tabPane" prefHeight="294.0" prefWidth="564.0" tabClosingPolicy="UNAVAILABLE" />
-                  <Pane fx:id="sumContainer" prefHeight="294.0" prefWidth="629.0">
-                     <FlowPane.margin>
-                        <Insets left="10.0" />
-                     </FlowPane.margin>
-                  </Pane>
-               </children>
-            </FlowPane>
             <Pane fx:id="savePane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0" visible="false">
                <children>
                   <Label layoutX="169.0" layoutY="29.0" text="Wird gespeichert">
                      <font>
                         <Font size="18.0" />
-                     </font></Label>
+                     </font>
+                  </Label>
                   <ProgressBar fx:id="pb_year" layoutX="114.0" layoutY="60.0" prefWidth="200.0" progress="0.0" />
                   <ProgressBar fx:id="pb_transa" layoutX="114.0" layoutY="118.0" prefWidth="200.0" progress="0.0" />
                </children>
             </Pane>
 
-            <Pane fx:id="pdfPane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0" visible="false">
+                        <Pane fx:id="pdfPane" layoutX="500.0" layoutY="200.0" prefHeight="200.0" prefWidth="430.0" visible="false">
                <children>
                   <Label layoutX="145.0" layoutY="43.0" text="PDF wird geladen">
                      <font>
@@ -95,6 +74,23 @@
                   <ProgressBar fx:id="pb_transa1" layoutX="114.0" layoutY="118.0" prefWidth="200.0" progress="0.0" />
                </children>
             </Pane>
+            <VBox alignment="TOP_CENTER" prefHeight="54.0" prefWidth="200.0" AnchorPane.rightAnchor="10.0">
+               <children>
+                  <HBox prefHeight="30.0" prefWidth="200.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="111.0" text="Eingeloggt als:" />
+                        <Label fx:id="lbl_account" prefHeight="17.0" prefWidth="68.0" text="lbl_account" />
+                     </children>
+                  </HBox>
+                  <Button fx:id="btn_back" mnemonicParsing="false" onAction="#backToLogin" text="Abmelden" />
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="37.0">
+               <children>
+                  <ListView fx:id="lv_bankAccounts" prefHeight="200.0" prefWidth="173.0" />
+                  <Button fx:id="btn_newBA" mnemonicParsing="false" text="Neues Konto" onAction="#newBA" />
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
    </children>
