--- a/src/view/windows/Overview.fxml
+++ b/src/view/windows/Overview.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -96,8 +97,9 @@
                   <Button fx:id="btn_newGroup" mnemonicParsing="false" onAction="#newGroup" text="Neue Gruppe" />
                </children>
             </VBox>
-            <Button layoutX="474.0" layoutY="42.0" mnemonicParsing="false" onAction="#newTransaction" text="Neue Transaction" />
-            <Button layoutX="475.0" layoutY="151.0" mnemonicParsing="false" onAction="#importTra" text="Importieren" />
+            <Button layoutX="45.0" layoutY="326.0" mnemonicParsing="false" onAction="#newTransaction" text="Neue Transaction" />
+            <Button layoutX="52.0" layoutY="387.0" mnemonicParsing="false" onAction="#importTra" text="Importieren" />
+            <Pane fx:id="tableContainer" layoutX="388.0" layoutY="37.0" prefHeight="488.0" prefWidth="735.0"/>
          </children>
       </AnchorPane>
    </children>
