--- a/src/view/windows/LogIn.fxml
+++ b/src/view/windows/LogIn.fxml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="231.0" prefWidth="470.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.LogInWindowCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="231.0" prefWidth="470.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.LogInWindowCtrl">
    <children>
       <Label alignment="CENTER" layoutX="10.0" layoutY="25.0" prefHeight="34.0" prefWidth="259.0" text="LOGIN" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <font>
             <Font size="23.0" />
          </font>
       </Label>
-      <VBox alignment="TOP_CENTER" layoutX="185.0" layoutY="76.0" prefHeight="68.0" prefWidth="470.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <VBox alignment="CENTER" layoutX="185.0" layoutY="76.0" prefHeight="68.0" prefWidth="470.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <ChoiceBox fx:id="chb_profiles" prefWidth="150.0" />
+            <Button fx:id="btn_addProfile" mnemonicParsing="false" onAction="#addProfile" text="Neuer Benutzer" />
          </children>
       </VBox>
-      <Button layoutX="209.0" layoutY="168.0" mnemonicParsing="false" text="OK" onAction="#ok" />
+      <HBox fx:id="hb_buttonbar" alignment="TOP_RIGHT" layoutX="108.0" layoutY="168.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#login" text="Einliggen" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" />
+         </padding>
+      </HBox>
    </children>
 </AnchorPane>
