--- a/src/view/windows/LogIn.fxml
+++ b/src/view/windows/LogIn.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="231.0" prefWidth="470.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.LogInWindowCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="231.0" prefWidth="470.0" styleClass="main" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.windows.LogInWindowCtrl">
    <children>
-      <Label alignment="CENTER" layoutX="10.0" layoutY="25.0" prefHeight="34.0" prefWidth="259.0" text="LOGIN" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <Label alignment="CENTER" layoutX="10.0" layoutY="25.0" prefHeight="34.0" prefWidth="259.0" text="LOGIN" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <font>
             <Font size="23.0" />
          </font>
@@ -19,7 +15,10 @@
       <VBox alignment="CENTER" layoutX="185.0" layoutY="76.0" prefHeight="68.0" prefWidth="470.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <ChoiceBox fx:id="chb_profiles" prefWidth="150.0" />
-            <Button fx:id="btn_addProfile" mnemonicParsing="false" onAction="#addProfile" text="Neuer Benutzer" />
+            <Button fx:id="btn_addProfile" mnemonicParsing="false" onAction="#addProfile" text="Neuer Benutzer">
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin></Button>
          </children>
       </VBox>
       <HBox fx:id="hb_buttonbar" alignment="TOP_RIGHT" layoutX="108.0" layoutY="168.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
